Improved encapsulation and interface. Updated some code beyond Java 1.8.